--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="maincontainer">
       <ul class="level1">
         <li><a href="HWs/HW1/index.html" target="_blank">Homework 1</a></li>
+        <li><a href="HWs/HW2/index.html" target="_blank">Homework 2</a></li>
       </ul>
     </div>
   </body>
