--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <ul class="level1">
         <li><a href="HWs/HW1/index.html" target="_blank">Homework 1</a></li>
         <li><a href="HWs/HW2/index.html" target="_blank">Homework 2</a></li>
+        <li><a href="HWs/HW3/index.html" target="_blank">Homework 3</a></li>
       </ul>
     </div>
   </body>
