--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="HWs/HW1/index.html" target="_blank">Homework 1</a></li>
         <li><a href="HWs/HW2/index.html" target="_blank">Homework 2</a></li>
         <li><a href="HWs/HW3/index.html" target="_blank">Homework 3</a></li>
+        <li><a href="HWs/HW4_5/index.html" target="_blank">Homework 4-5</a></li>
       </ul>
     </div>
   </body>
