--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <li><a href="HWs/HW2/index.html" target="_blank">Homework 2</a></li>
         <li><a href="HWs/HW3/index.html" target="_blank">Homework 3</a></li>
         <li><a href="HWs/HW4_5/index.html" target="_blank">Homework 4-5</a></li>
-        <li><a href="HWs/HW6_7/index.html" target="_blank">Homework 6-7</a></li>
+        <li><a href="HWs/HW6_8/index.html" target="_blank">Homework 6-8</a></li>
+        <li><a href="HWs/HW9/index.html" target="_blank">Homework 9</a></li>
       </ul>
     </div>
   </body>
