--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
         <li><a href="HWs/HW1/index.html" target="_blank">Homework 1</a></li>
         <li><a href="HWs/HW2/index.html" target="_blank">Homework 2</a></li>
         <li><a href="HWs/HW3/index.html" target="_blank">Homework 3</a></li>
-        <li><a href="HWs/HW4_5/index.html" target="_blank">Homework 4-5</a></li>
-        <li><a href="HWs/HW6_8/index.html" target="_blank">Homework 6-8</a></li>
+        <li>
+          <a href="HWs/HW4_5/index.html" target="_blank">Homeworks 4-5</a>
+        </li>
+        <li>
+          <a href="HWs/HW6_8/index.html" target="_blank">Homeworks 6-8</a>
+        </li>
         <li><a href="HWs/HW9/index.html" target="_blank">Homework 9</a></li>
+        <li>
+          <a href="HWs/HW10_11/index.html" target="_blank">Homeworks 10-11</a>
+        </li>
       </ul>
     </div>
   </body>
