--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <li>
           <a href="HWs/HW10_11/index.html" target="_blank">Homeworks 10-11</a>
         </li>
+        <li>
+          <a href="HWs/HW12_13/index.html" target="_blank">Homeworks 12-13</a>
+        </li>
       </ul>
     </div>
   </body>
