--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <li>
           <a href="HWs/HW12_13/index.html" target="_blank">Homeworks 12-13</a>
         </li>
+        <li>
+          <a href="HWs/HW14_15/index.html" target="_blank">Homeworks 14-15</a>
+        </li>
       </ul>
     </div>
   </body>
