--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <li>
           <a href="HWs/HW14_15/index.html" target="_blank">Homeworks 14-15</a>
         </li>
+        <li>
+          <a href="HWs/HW16/index.html" target="_blank">Homework 16</a>
+        </li>
       </ul>
     </div>
   </body>
