--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <li>
           <a href="HWs/HW16/index.html" target="_blank">Homework 16</a>
         </li>
+        <li>
+          <a href="HWs/HW17-19/index.html" target="_blank">Homework 17-19</a>
+        </li>
       </ul>
     </div>
   </body>
