--- a/Lesson22/index.html
+++ b/Lesson22/index.html
@@ -119,5 +119,5 @@
       dicta numquam ducimus non exercitationem laborum!
     </div>
   </body>
-  <script src="script.js"></script>
+  <script src="script.ts"></script>
 </html>
