--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <li>
           <a href="HWs/HW17-19/index.html" target="_blank">Homework 17-19</a>
         </li>
+        <li>
+          <a href="HWs/HW20/index.html" target="_blank">Homework 20</a>
+        </li>
       </ul>
     </div>
   </body>
